--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
-image: alpine:latest
+image: monachus/hugo
+
 pages:
-  stage: deploy
   script:
-  - echo 'Nothing to do...'
+    - hugo
   artifacts:
     paths:
-    - public/
+      - public
   only:
-  - master
+    - master
